--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
   get: ^4.6.5
+  sizer: ^2.0.15
+  flutter_svg: ^1.1.5
 
 
   # The following adds the Cupertino Icons font to your application.
