--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -29,14 +29,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  get: ^4.6.5
-  sizer: ^2.0.15
-  flutter_svg: ^1.1.5
+
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  get: ^4.6.5
+  sizer: ^2.0.15
+  flutter_svg: ^1.1.5
+  carousel_slider: ^4.1.1
+  http: ^0.13.5
+  expandable: ^5.0.1
 
 dev_dependencies:
   flutter_test:
