Add Shared Preferences Package & data store in prefs & local

--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   carousel_slider: ^4.1.1
   http: ^0.13.5
   expandable: ^5.0.1
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
