--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
+  intl: ^0.17.0
   sizer: ^2.0.15
   flutter_svg: ^0.23.0
   carousel_slider: ^4.1.1
