--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   flutter_html: ^3.0.0-alpha.3
   im_stepper: ^1.0.1+1
   liquid_pull_to_refresh: ^3.0.1
-  another_stepper: ^1.0.4
+  cached_network_image: ^3.2.0
   image_picker: ^0.8.5+3
   file_picker: ^5.0.1
 
