--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   cached_network_image: ^3.2.0
   image_picker: ^0.8.5+3
   file_picker: ^5.0.1
+  sliding_switch: ^1.1.0
 
 dev_dependencies:
   flutter_test:
