--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   carousel_slider: ^4.1.1
   http: ^0.13.5
   expandable: ^5.0.1
+  card_swiper: ^2.0.4
+  photo_view: ^0.14.0
+  share_plus: ^6.3.0
   shared_preferences: ^2.0.15
   flutter_html: ^3.0.0-alpha.3
   im_stepper: ^1.0.1+1
