--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   shared_preferences: ^2.0.15
   flutter_html: ^3.0.0-alpha.3
   im_stepper: ^1.0.1+1
+  url_launcher: ^6.1.6
+  multi_state_button: ^1.1.3
   liquid_pull_to_refresh: ^3.0.1
   cached_network_image: ^3.2.0
   image_picker: ^0.8.5+3
