--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   file_picker: ^5.0.1
   sliding_switch: ^1.1.0
 
+  # Payment Gateway
+  razorpay_flutter: ^1.3.4
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
