--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   percent_indicator: ^4.2.2
   image_picker: ^0.8.5+3
   file_picker: ^5.0.1
-  sliding_switch: ^1.1.0
+  flutter_toggle_tab: ^1.2.0
 
   # Payment Gateway
   razorpay_flutter: ^1.3.4
