--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -45,7 +45,8 @@ dependencies:
   share_plus: ^6.3.0
   shared_preferences: ^2.0.15
   flutter_html: ^3.0.0-alpha.3
-  im_stepper: ^1.0.1+1
+  # im_stepper: ^1.0.1+1
+  another_stepper: ^1.1.6
   url_launcher: ^6.1.6
   multi_state_button: ^1.1.3
   liquid_pull_to_refresh: ^3.0.1
