--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -56,6 +56,12 @@ dependencies:
   image_picker: ^0.8.5+3
   file_picker: ^5.0.1
   flutter_toggle_tab: ^1.2.0
+  dio: ^4.0.6
+  path_provider: ^2.0.11
+
+  permission_handler: ^10.2.0
+  flutter_downloader: ^1.10.1
+  external_path: ^1.0.3
 
   # Payment Gateway
   razorpay_flutter: ^1.3.4
