--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   flutter_toggle_tab: ^1.2.0
   dio: ^4.0.6
   path_provider: ^2.0.11
+  file_utils: any
 
   permission_handler: ^10.2.0
   flutter_downloader: ^1.10.1
