--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -59,10 +59,13 @@ dependencies:
   dio: ^4.0.6
   path_provider: ^2.0.11
   file_utils: any
+  flutter_typeahead: ^3.2.7
 
   permission_handler: ^10.2.0
   flutter_downloader: ^1.10.1
   external_path: ^1.0.3
+  # mobile_scanner: ^2.0.0
+  flutter_barcode_scanner: ^2.0.0
 
   # Payment Gateway
   razorpay_flutter: ^1.3.4
@@ -124,7 +127,15 @@ flutter:
           style: normal
     - family: elephantregular
       fonts:
-        - asset: fonts/elephant-webfont.ttf  
+        - asset: fonts/elephant-webfont.ttf
+    - family: NexaBold
+      fonts:
+        - asset: fonts/FontsFree-Net-n1.ttf
+          style: normal
+    - family: Brand
+      fonts:
+        - asset: fonts/brand-webfont.ttf
+          style: normal
 
   # example:
   # fonts:
