--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -66,6 +66,8 @@ dependencies:
   external_path: ^1.0.3
   # mobile_scanner: ^2.0.0
   flutter_barcode_scanner: ^2.0.0
+  geolocator: ^9.0.2
+  geocoding: ^2.0.5
 
   # Payment Gateway
   razorpay_flutter: ^1.3.4
