--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -68,9 +68,11 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   geolocator: ^9.0.2
   geocoding: ^2.0.5
+  flutter_local_notifications: 
 
   # Payment Gateway
   razorpay_flutter: ^1.3.4
+  # native_notify: ^0.0.17
 
 dev_dependencies:
   flutter_test:
