--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -60,7 +60,6 @@ dependencies:
   path_provider: ^2.0.11
   file_utils: any
   flutter_typeahead: ^3.2.7
-
   permission_handler: ^10.2.0
   flutter_downloader: ^1.10.1
   external_path: ^1.0.3
@@ -68,7 +67,7 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   geolocator: ^9.0.2
   geocoding: ^2.0.5
-  flutter_local_notifications: 
+  awesome_notifications: ^0.7.4+1
 
   # Payment Gateway
   razorpay_flutter: ^1.3.4
