--- a/olocker/android/app/src/main/AndroidManifest.xml
+++ b/olocker/android/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
               />
             <meta-data
                 android:name="com.google.firebase.messaging.default_notification_channel_id"
-                android:value="@string/default_notification_channel_id"/>
+                android:value="com.myjeweller.olocker"/>
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
