--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -68,7 +68,7 @@ dependencies:
   geolocator: ^9.0.2
   geocoding: ^2.0.5
   # awesome_notifications: ^0.7.4+1
-  # flutter_local_notifications:
+  flutter_local_notifications:
   firebase_messaging: ^14.2.2
   # Payment Gateway
   firebase_auth: ^4.2.2
