--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -67,13 +67,12 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   geolocator: ^9.0.2
   geocoding: ^2.0.5
-  # awesome_notifications: ^0.7.4+1
-  flutter_local_notifications:
-  firebase_messaging: ^14.2.2
+  flutter_local_notifications: 
+  firebase_messaging: 
   # Payment Gateway
-  firebase_auth: ^4.2.2
+  firebase_auth: 
   razorpay_flutter: ^1.3.4
-  firebase_core: ^2.5.0
+  firebase_core: 
   rxdart: 
   # native_notify: ^0.0.17
 
