--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.6 <3.0.0"
+  sdk: ">=3.0.2 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,32 +34,32 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   get: ^4.6.5
-  intl: ^0.17.0
+  intl: ^0.18.1
   sizer: ^2.0.15
-  flutter_svg: ^0.23.0
+  flutter_svg: ^2.0.6
   carousel_slider: ^4.1.1
-  http: ^0.13.5
+  http:
   expandable: ^5.0.1
   card_swiper: ^2.0.4
   photo_view: ^0.14.0
-  share_plus: ^6.3.0
+  share_plus: ^7.0.1
   shared_preferences: ^2.0.15
   flutter_html: ^3.0.0-alpha.3
-  shimmer: ^2.0.0
+  shimmer: ^3.0.0
   another_stepper: ^1.1.6
   url_launcher: ^6.1.6
   flutter_pdfview: ^1.2.5
   multi_state_button: ^1.1.3
   liquid_pull_to_refresh: ^3.0.1
-  cached_network_image: ^3.2.0
+  cached_network_image:
   percent_indicator: ^4.2.2
-  image_picker: ^0.8.5+3
-  file_picker: ^5.0.1
+  image_picker:
+  file_picker:
   flutter_toggle_tab: ^1.2.0
-  dio: ^4.0.6
+  dio: ^5.1.2
   path_provider: ^2.0.11
   file_utils: any
-  flutter_typeahead: ^3.2.7
+  flutter_typeahead: ^4.4.0
   permission_handler: ^10.2.0
   flutter_downloader: ^1.10.1
   external_path: ^1.0.3
@@ -71,7 +71,7 @@ dependencies:
   firebase_messaging: 
   # Payment Gateway
   firebase_auth: 
-  razorpay_flutter: ^1.3.4
+  razorpay_flutter:
   firebase_core: 
   rxdart: 
   # native_notify: ^0.0.17
