--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   photo_view: ^0.14.0
   share_plus: ^7.0.1
   shared_preferences: ^2.0.15
-  flutter_html: ^3.0.0-alpha.3
+  # flutter_html: ^3.0.0-alpha.3
+  flutter_super_html_viewer: ^0.1.0
   shimmer: ^3.0.0
   another_stepper: ^1.1.6
   url_launcher: ^6.1.6
