--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -68,8 +68,8 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   geolocator: ^9.0.2
   geocoding: ^2.0.5
-  flutter_local_notifications: 
-  firebase_messaging: 
+  flutter_local_notifications:
+  firebase_messaging: ^14.7.10
   # Payment Gateway
   firebase_auth: 
   razorpay_flutter:
