--- a/olocker/pubspec.yaml
+++ b/olocker/pubspec.yaml
@@ -69,7 +69,7 @@ dependencies:
   geolocator: ^9.0.2
   geocoding: ^2.0.5
   flutter_local_notifications:
-  firebase_messaging: ^14.7.10
+  firebase_messaging:
   # Payment Gateway
   firebase_auth: 
   razorpay_flutter:
